[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gogs-pr-mcp"
version = "1.0.0"
description = "Gogs Pull Request 管理 MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
gogs-pr = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
